# baxter-pnp-enterprise

./: .gitignore  CMakeLists.txt  README.md  package.xml
bt_xml/: baxter_pnp_bt.xml
cfg/: BaxterPnP.cfg
config/: baxter_pnp.yaml
docs/: interview_qa.md
include/baxter_pnp/: bt_nodes.h  gripper_controller.h  hardware_interface.h  ik_solver.h  logging_utils.h  perception_interface.h  perception_node.h  robot_lifecycle.h
launch/: baxter_pnp.launch
src/: bt_nodes.cpp  camera_nodelet.cpp  ik_solver.cpp  perception_node.cpp  pnp_main.cpp  robot_lifecycle.cpp
